extra/tools/kube/aframe-smart-home.yml
#YAML
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aframe-smart-home
  name: aframe-smart-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aframe-smart-home
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aframe-smart-home
    spec:
      containers:
      - image: tmp/aframe-smart-home:latest
        name: aframe-smart-home
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: aframe-smart-home
  name: aframe-smart-home
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: aframe-smart-home
  type: NodePort
status:
  loadBalancer: {}
---
